--- a/_posts/2024-02-21-title.md
+++ b/_posts/2024-02-21-title.md
@@ -22,7 +22,16 @@ date: 2024-02-21
 
 # Python through [Boot.Dev](https://www.boot.dev/tracks/backend)
 
-Currently on Python: Variables.
+Currently on **Loops**.
+
+Completed Today:
+* Introduction
+* Variables
+* Functions
+* Scope
+* Testing and Debugging
+* Computing
+* Comparisons
 
 # HTML/CSS/JS through [The Odin Project](https://www.theodinproject.com/)
 
