--- a/_posts/2024-02-15-title.md
+++ b/_posts/2024-02-15-title.md
@@ -1,5 +1,5 @@
 ---
-title: "FIRST-POST"
+title: "Initial Commit"
 date: 2024-02-15
 ---
 Set up blog to track personal progress using GitHub Pages.
