--- a/_posts/2024-02-16-title.md
+++ b/_posts/2024-02-16-title.md
@@ -1,5 +1,5 @@
 ---
-title: "Researched Job Listings + LC.1480"
+title: "Daily Update"
 date: 2024-02-16
 ---
 I want to build something to automate these daily posts, or at least something that is tailored to keeping track of updates on specific skills I want to learn.
