--- a/_posts/2024-02-17-title.md
+++ b/_posts/2024-02-17-title.md
@@ -1,5 +1,5 @@
 ---
-title: "Timberman Clone & LC.1672"
+title: "Daily Update"
 date: 2024-02-17
 ---
 Following "Beginning C++ Game Programming" by John Horton as a refresher on C++.
