--- a/_posts/2024-02-22-title.md
+++ b/_posts/2024-02-22-title.md
@@ -1,10 +1,9 @@
 ---
-title: "Pivot to Python"
+title: "Daily Update"
 date: 2024-02-22
 ---
 
-> # tl;dr
-
+> tl;dr
 New idea for travel app to use, inspired by planning for upcoming trip to Japan.
 
 I also want to port over an old project that was made in OldGL to latest OpenGL.
